--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <section id="gallery">
             <h2>Photo Gallery</h2>
 
-            <img src="https://via.placeholder.com/200x150" 
-                 alt="Placeholder image representing nature scenery">
+            <img src="photo1.jpeg" 
+                 alt="Nature scenery">
 
-            <img src="https://via.placeholder.com/200x150/888888" 
-                 alt="Gray placeholder image used as a sample photo">
+            <img src="photo2.jpeg" 
+                 alt="Landscape">
 
-            <img src="https://via.placeholder.com/200x150/555555" 
-                 alt="Dark-themed placeholder image representing a landscape">
+            <img src="photo3.jpeg" 
+                 alt="Landscape">
         </section>
     </main>
 
@@ -54,3 +54,4 @@
     </footer>
 </body>
 </html>
+
